examples/namespaced/vpcv1/v1beta1/route.yaml
apiVersion: vpcv1.nebius.m.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: vpcv1/v1beta1/route
  labels:
    testing.upbound.io/example-name: default
  name: default
  namespace: upbound-system
spec:
  forProvider:
    name: vpcv1route
    destination:
      cidr: 0.0.0.0/0
    nextHop:
      defaultEgressGateway: true
    parentIdSelector:
      matchLabels:
        testing.upbound.io/example-name: default
